add object list for length

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
     </select>
     <p>В</p>
     <select id="secondSelect" name="secondSelect">
+        <option>Сажень</option>
+        <option>Футы</option>
+        <option>Аршины</option>
         <option>Километры</option>
         <option>Метры</option>
         <option>Сантиметры</option>
