--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>Русская система мер</title>
 </head>
@@ -24,7 +25,25 @@
     </div>
 
 
-    <select id="firstSelect" name="firstSelect">
+    <select class="top-select show" id="firstSelectLength" name="firstSelectLength" data-type="length">
+        <option>Вёрст</option>
+        <option>Фунтов</option>
+        <option>Аршинов</option>
+        <option>Футов</option>
+        <option>Сажень</option>
+        <option>Пядей</option>
+    </select>
+    <select class="top-select" id="firstSelectForSquare" name="firstSelectForSquare" data-type="square">
+        <option>Десятин</option>
+        <option>Фунтов</option>
+        <option>Аршинов</option>
+        <option>Футов</option>
+        <option>Сажень</option>
+        <option>Пядей</option>
+
+    </select>
+
+    <select class="top-select" id="firstSelectForVolume" name="firstSelectForVolume" data-type="volume">
         <option>Вёрст</option>
         <option>Фунтов</option>
         <option>Аршинов</option>
@@ -33,7 +52,7 @@
         <option>Пядей</option>
     </select>
     <p>В</p>
-    <select id="secondSelect" name="secondSelect">
+    <select class="bottom-select show" id="secondSelectLength" name="secondSelectLength" data-type="length">
         <option>Сажень</option>
         <option>Футы</option>
         <option>Аршины</option>
@@ -43,6 +62,26 @@
         <option>Сантиметры</option>
         <option>Миллиметры</option>
     </select>
+
+    <select class="bottom-select" id="secondSelectForSquare" name="secondSelectForSquare" data-type="square">
+        <option>Сажень</option>
+        <option>Гектары</option>
+        <option>Сотки</option>
+        <option>Километры</option>
+        <option>Метры</option>
+    </select>
+
+    <select class="bottom-select" id="secondSelectVolume" name="secondSelectVolume" data-type="volume">
+        <option>Сажень</option>
+        <option>Футы</option>
+        <option>Аршины</option>
+        <option>Пяди</option>
+        <option>Километры</option>
+        <option>Метры</option>
+        <option>Сантиметры</option>
+        <option>Миллиметры</option>
+    </select>
+
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="firstElement"
         oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
