edited functions, index, objects, renderer

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,6 @@
 
     <select class="top-select show" id="firstSelectLength" name="firstSelectLength" data-type="length">
         <option>Вёрст</option>
-        <option>Фунтов</option>
         <option>Аршинов</option>
         <option>Футов</option>
         <option>Сажень</option>
@@ -59,7 +58,6 @@
         <option>Футов</option>
         <option>Сажень</option>
         <option>Пядей</option>
-
     </select>
 
     <select class="top-select" id="firstSelectVolume" name="firstSelectForVolume" data-type="volume">
@@ -67,8 +65,14 @@
         <option>Аршинов</option>
         <option>Футов</option>
     </select>
+
+    <select class="top-select" id="firstSelectMass" name="firstSelectMass" data-type="mass">
+        <option>Фунтов</option>
+
+    </select>
     <p>В</p>
     <select class="bottom-select show" id="secondSelectLength" name="secondSelectLength" data-type="length">
+        <option>Вёрсты</option>
         <option>Сажень</option>
         <option>Футы</option>
         <option>Аршины</option>
@@ -81,8 +85,8 @@
 
     <select class="bottom-select" id="secondSelectForSquare" name="secondSelectForSquare" data-type="square">
         <option>Десятины</option>
-        <option>Вёрстs</option>
-        <option>Аршинs</option>
+        <option>Вёрсты</option>
+        <option>Аршины</option>
         <option>Футов</option>
         <option>Сажень</option>
         <option>Гектары</option>
