--- a/src/index.html
+++ b/src/index.html
@@ -1,131 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/material.min.css">
-    <script src="styles/material.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-    <link rel="stylesheet" href="styles/css/style.css">
-    <link rel="stylesheet" href="styles/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Русская система мер</title>
+
+    <link rel="stylesheet" href="styles/material.min.css">
+
+    <script src="styles/material.min.js"></script>
+    <script src="./script.js"></script>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styles/css/font-awesome.min.css">
+
 </head>
+
 <body>
-    <main>
-    <aside>
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored burger">
-            <i class="material-icons">X</i>
-        </button>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+    mdl-layout--fixed-tabs">
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <span class="mdl-layout-title">🌠 Конвертатор</span>
+            </div>
+            <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+                <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Длина</a>
+                <a href="#fixed-tab-2" class="mdl-layout__tab">Площадь</a>
+                <a href="#fixed-tab-3" class="mdl-layout__tab">Объём</a>
+                <a href="#fixed-tab-4" class="mdl-layout__tab">Масса</a>
+            </div>
+        </header>
+        <div class="mdl-layout__drawer">
+            <span class="mdl-layout-title">🌠 Конвертатор</span>
+        </div>
+        <main class="mdl-layout__content" style="padding: 16px">
 
-        <a href="#">
-            <i class="fa fa-question" aria-hidden="false"></i>
-        </a>
+            <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                <div class="mdl-card mdl-cell mdl-cell--12-col">
+                    <div class="mdl-card__supporting-text">
+                        <h4>Выберите исходную меру</h4>
+                        вставь туда какой-то крутой интересный текст стильный модный<br>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <select class="mdl-textfield__input" id="from" name="from">
+                                <option></option>
+                                <option value="cm">Сантиметры</option>
+                                <option value="m">Метры</option>
+                                <option value="km">Километры</option>
+                            </select>
+                            <label class="mdl-textfield__label" for="from">Исходная мера</label>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-        <a href="#">
-            <i class="fa fa-address-card" aria-hidden="false"></i>
-        </a>
-    </aside>
-    <section>
-        <h1>Простой сервис конвертации</h1>
-    <p>Из</p>
-    <div id="divForRadioButtons"> 
-        <form id="radioButtons">
-            <input type="radio" id="radioButtonLength" name="measurement" value="length" checked>
-            <label for="radioButtonLength">Меры длины</label>
-        
-            <input type="radio" id="radioButtonSquare" name="measurement" value="square">
-            <label for="radioButtonSquare">Меры площади</label>
-    
-            <input type="radio" id="radioButtonVolume" name="measurement" value="volume">
-            <label for="radioButtonVolume">Меры объёма</label>
+            <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                <div class="mdl-card mdl-cell mdl-cell--12-col">
+                    <div class="mdl-card__supporting-text">
+                        <h4>Выберите выходную меру</h4>
+                        сюда тоже вставь какой-то текст топ 10 фактов о беременных бегемотах<br>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <select class="mdl-textfield__input" id="to" name="to">
+                                <option></option>
+                                <option value="cm">Сантиметры</option>
+                                <option value="m">Метры</option>
+                                <option value="km">Километры</option>
+                            </select>
+                            <label class="mdl-textfield__label" for="to">Выходная мера</label>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-            <input type="radio" id="radioButtonMass" name="measurement" value="mass">
-            <label for="radioButtonVolume">Меры массы</label>
-        </form>
+            <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                <div class="mdl-card mdl-cell mdl-cell--12-col">
+                    <div class="mdl-card__supporting-text">
+                        <h4>Введите число и узнайте результат</h4>
+                        ты же сам посчитать не можешь<br>
+
+                        <div class="mdl-textfield mdl-js-textfield">
+                            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="number">
+                            <label class="mdl-textfield__label" for="number">Число...</label>
+                            <span class="mdl-textfield__error">Вы ввели не число!</span>
+                        </div> <span class="result-text">= ...</span>
+
+                        <br>
+                        <button onclick="calculate()"
+                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                            Высчитать
+                        </button>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-
-
-    <select class="top-select show" id="firstSelectLength" name="firstSelectLength" data-type="length">
-        <option>Вёрст</option>
-        <option>Аршинов</option>
-        <option>Футов</option>
-        <option>Сажень</option>
-        <option>Пядей</option>
-    </select>
-    <select class="top-select" id="firstSelectSquare" name="firstSelectForSquare" data-type="square">
-        <option>Десятин</option>
-        <option>Вёрст</option>
-        <option>Аршинов</option>
-        <option>Футов</option>
-        <option>Сажень</option>
-        <option>Пядей</option>
-    </select>
-
-    <select class="top-select" id="firstSelectVolume" name="firstSelectForVolume" data-type="volume">
-        <option>Сажени</option>
-        <option>Аршинов</option>
-        <option>Футов</option>
-    </select>
-
-    <select class="top-select" id="firstSelectMass" name="firstSelectMass" data-type="mass">
-        <option>Фунтов</option>
-
-    </select>
-    <p>В</p>
-    <select class="bottom-select show" id="secondSelectLength" name="secondSelectLength" data-type="length">
-        <option>Вёрсты</option>
-        <option>Сажень</option>
-        <option>Футы</option>
-        <option>Аршины</option>
-        <option>Пяди</option>
-        <option>Километры</option>
-        <option>Метры</option>
-        <option>Сантиметры</option>
-        <option>Миллиметры</option>
-    </select>
-
-    <select class="bottom-select" id="secondSelectForSquare" name="secondSelectForSquare" data-type="square">
-        <option>Десятины</option>
-        <option>Вёрсты</option>
-        <option>Аршины</option>
-        <option>Футов</option>
-        <option>Сажень</option>
-        <option>Гектары</option>
-        <option>Сотки</option>
-        <option>Километры</option>
-        <option>Метры</option>
-    </select>
-
-    <select class="bottom-select" id="secondSelectVolume" name="secondSelectVolume" data-type="volume">
-        <option>Сажень</option>
-        <option>Футы</option>
-        <option>Аршины</option>
-        <option>Пяди</option>
-        <option>Километры</option>
-        <option>Метры</option>
-        <option>Сантиметры</option>
-        <option>Миллиметры</option>
-    </select>
-
-    <select class="bottom-select" id="secondSelectMass" name="secondSelectMass" data-type="mass">
-        <option>Килограммы</option>
-        <option>Граммы</option>
-        <option>Миллиграммы</option>
-    </select>
-
-    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="firstElement"
-        oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
-        <label class="mdl-textfield__label" for="firstElement">Число...</label>
-        <span class="mdl-textfield__error">Hyжно ввести число!</span>
-    </div>
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
-    id="button">Высчитать</button>
-    <p id="answer"></p>
-    </section>
-</main>
-
-    <script src="objects.js"></script>
-    <script src="functions.js"></script>
-    <script src="renderer.js"></script>
 </body>
+
 </html>
