--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </header>
         <div class="mdl-layout__drawer">
             <nav class="mdl-navigation">
-                <a class="mdl-navigation_link">🌠 Конвертатор</a>
+                <a class="mdl-navigation__link">🌠 Конвертатор</a>
                 <a class="mdl-navigation__link" href="#" id="valueslink">История величин</a>
                 <a class="mdl-navigation__link" href="#" id="devlink">О авторе</a>
             </nav>
