--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     mdl-layout--fixed-tabs">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
-                <span class="mdl-layout-title">🌠 Конвертатор</span>
+                <span class="mdl-layout-title">Конвертатор</span>
             </div>
             <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
                 <a href="#fixed-tab-1" onclick="setCurrentCI('length')" class="mdl-layout__tab is-active">Длина</a>
@@ -30,7 +30,7 @@
         </header>
         <div class="mdl-layout__drawer">
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link">🌠 Конвертатор</a>
+                <a class="mdl-navigation__link">Конвертатор</a>
                 <a class="mdl-navigation__link" href="#" id="valueslink">История величин</a>
                 <a class="mdl-navigation__link" href="#" id="devlink">О авторе</a>
             </nav>
